Change log for duff
===================

Maintained since version 0.3.1.

2012-01-27  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffdriver.c (process_clusters): Added test for whether base item has entered
 INVALID state.
 * dufffile.c (get_file_sample, get_file_digest): Removed duplicate check for
 INVALID state.

2012-01-25  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.h (Status): Removed unused DUPLICATE status.
 * duffdriver.c (process_file): Removed read permission check on files (credits
 to Kamal Mostafa).

2012-01-24  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.h (HASH_BITS): Increased to 10.
 * duffdriver.c (print_terminator): Added function.
 * duff.h duffdriver.c dufffile.c (file_list_*): Renamed from entry_list_*.
 * duff.h duffdriver.c dufffile.c (free_file): Renamed from free_entry.
 * duff.h duffdriver.c dufffile.c (init_file): Renamed from fill_entry.
 * duff.h duffdriver.c dufffile.c duffutil.c (FileList): Renamed from EntryList.
 * duff.h duffdriver.c dufffile.c duffutil.c (File): Renamed from Entry.
 * dufffile.c: Renamed from duffentry.c.
 * duffdriver.c (has_recorded_directory): Renamed from has_recursed_directory.
 * duffdriver.c (DirList): Added array of Dir structs.
 * duffdriver.c (Dir): Renamed from Directory and removed list link.
 * duff.h duffdriver.c: Moved Directory to duffdriver.
 * duffdriver.c (process_directory): Renamed from recurse_directory.
 * duff.h (EntryList): Renamed from List.
 * duffentry.c (get_entry_sample, get_entry_digest, compare_entry_contents):
 Improved error reporting.
 * duff.h duffentry.c: Added BUFFER_SIZE macro for size of read buffers.
 * duff.1: Improved grammar for -z flag.
 * duff.1: Clarified language for -e flag.
 * duff.1: Fixed statement claiming digests are calculated in thorough mode.

2012-01-23  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffdriver.c (process_args, process_clusters): Moved freeing of entries to
 directly after each bucket has been processed.